Delete friends end point and methods